bonus/confs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: playground-app
  ports:
    - port: 8888
      targetPort: 8888
